2007-08-05  Aaron Bockover  <abock@gnome.org>

	* POTFILES.in: Removed aac.xml.in

2007-07-20  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Added Portuguese translation by Filipe Gomes
	<filipefgomes@gmail.com>.
	* LINGUAS: Added Portuguese (pt) to the list.

2007-07-19  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Fixed bug #456716

2007-07-19  Raivis Dejus  <orvils@gmail.com>

	* lv.po: Added Latvian Translation.
	* LINGUAS: Added Latvian Translation.

2007-07-15  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2007-07-11  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation.

2007-06-29  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation provided
	  by Daniel Abreu (bug #451439).

2007-06-18  Alexandre Prokoudine  <alexandre.prokoudine@gmail.com>

	* ru.po: Updated Russian translation.

2007-06-14  Pema Geyleg <pema.geyleg@gmail.com>

	* dz.po: Updated dzongkha translation

2007-06-10  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

2007-06-09  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2007-06-04  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2007-06-04  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2007-06-03  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2007-06-02  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation by Og Maciel
	<ogmaciel@ubuntu.com>. Closes bug #442758.

2007-06-01  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2007-05-31  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.
