@@ -50,8 +50,9 @@ src/Core/Banshee.Base/Banshee.PlayerMigration/PlayerImport.cs
 src/Core/Banshee.Base/Banshee.PlayerMigration/PlayerImportDialog.cs
 src/Core/Banshee.Base/Banshee.PlayerMigration/PlayerImportSource.cs
 src/Core/Banshee.Base/Banshee.PlayerMigration/RhythmboxPlayerImport.cs
-src/Core/Banshee.Base/Banshee.Playlists.Formats/M3u.cs
-src/Core/Banshee.Base/Banshee.Playlists.Formats/Pls.cs
+src/Core/Banshee.Base/Banshee.Playlists.Formats/AsxPlaylistFormat.cs
+src/Core/Banshee.Base/Banshee.Playlists.Formats/M3uPlaylistFormat.cs
+src/Core/Banshee.Base/Banshee.Playlists.Formats/PlsPlaylistFormat.cs
 src/Core/Banshee.Base/Banshee.Playlists/PlaylistFileUtil.cs
 src/Core/Banshee.Base/Banshee.SmartPlaylist/Editor.cs
 src/Core/Banshee.Base/Banshee.SmartPlaylist/QueryBuilder.cs
